--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <canvas id="c" width="587" height="664" style="border:1px solid"></canvas>
     </div>
     <script src="js/compiled/koinz.js" type="text/javascript"></script>
   </body>
